# Malloc-Implementations

./: .gitmodules  README.md  malloc_checker.cpp
Heap-Layers/: heaplayers.h
Heap-Layers/heaps/: all.h
Heap-Layers/heaps/buildingblock/: adaptheap.h  (+2 more)
Heap-Layers/locks/: maclock.h  recursivelock.h  spinlock.h
Heap-Layers/threads/: cpuinfo.h
Heap-Layers/utility/: bins64k.h  sassert.h
Heap-Layers/wrappers/: gnuwrapper.cpp  mallocinfo.h  mmapwrapper.h  wrapper.cpp
allocators/CAMA/: Makefile  ansiwrapper.h  bitops.h  cama-driver.cpp  camarea.h  camarea2.c  libcama.cpp  malloc-test.c
allocators/dlmalloc/dlmalloc286/: CMakeLists.txt
allocators/jemalloc/: compile  jemalloc.c
allocators/kmalloc/: compile
allocators/nedmalloc/: Readme.txt  nedmalloc.vcproj
allocators/omalloc/: Makefile  gnuwrapper.cpp  issetugid.c  omalloc.c  random.c
allocators/ottomalloc/: Makefile  arc4random.c  libottomalloc.cpp  ottomalloc_linux.c  ottomallocheap.h
allocators/phkmalloc/: Makefile  phkmalloc.c  phkmalloc_linux.c  phkmalloc_reap.c  phkmalloc_sc.c  phkmalloc_sc_reap.c  phkmallocheap.h
allocators/streamflow/: Makefile  README  malloc_new.cpp  malloc_new.h  override.c
dlmalloc/dlmalloc272/: compile-nolocks  dlmalloc.c  libdlmalloc.cpp
dlmalloc/dlmalloc282/: compile  dlmalloc.c
kmalloc/: kmalloc.c  libkmalloc.cpp
nedmalloc/: Benchmarks.xls  malloc.c.h  nedmalloc.c  nedmalloc.sln  test.c
phkmalloc/: compile  libphk.cpp  libphkmalloc.cpp  sealer.cpp
tcmalloc/google-perftools-0.91/: Makefile  Makefile.in  config.status  libtool
util/: heapshield.cpp
(+128 files in other folders)
